--- a/conan_doyle_template/Test.html
+++ b/conan_doyle_template/Test.html
@@ -29,17 +29,17 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <!-- change the href and the text to exactly match your page number -->
-              <a class="dropdown-item" href="sample_page_number.html">sample page number</a>
+              <a class="dropdown-item" href="Test.html">Test</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
     <div class="container-fluid">
-      <h1>The Return of Sherlock Holmes: No. 2. The adventure of the Norwood builder. Holograph</h1>
+      <h1>The Return of Sherlock Holmes: No. 70. The adventure of the Norwood builder. Holograph</h1>
       
       <!-- change the content of this h2 to exactly match your page number -->
-      <h2 id='folio'>sample_page_number</h2>
+      <h2 id='folio'>Test</h2>
       <div id="stats"></div>
       <div class="form-group">
         <select class="form-control" id="sel-version" onChange="selectVersion(event)">
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-5">  
             <!-- change the src of this img to exactly match your page number -->
-            <img src="sample_page_number.jpeg" />
+            <img src="0070_070_33v.jpeg" />
         </div>
         <div class="col-7" id="text"></div>
       </div>
