--- a/conan_doyle_template/index.html
+++ b/conan_doyle_template/index.html
@@ -27,7 +27,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <!-- change the href and the text to match your page number -->
-              <a class="dropdown-item" href="sample_page_number.html">sample page number</a>
+              <a class="dropdown-item" href="Test.html">sample page number</a>
             </div>
           </li>
         </ul>
@@ -39,16 +39,14 @@
       <div class="row">
         <div class="col-5">   
             <p>Welcome to the digital edition (light) of Conan Doyle's <i>The Adventure of the Norwood Builder</i>, made as a project for the 2024 edition of the Antwerp Digital Humanities Summer School.</p>
-          <p>Give here some context about the manuscript and the assignment by writing directly into the html, for example:</p>
           <ul>
-            <li>A photograph of Sir Arthur Conan Doyle;</li>
-            <li>A table/list with the pages in this digital edition;</li>
+            <li>Digital Edition Light: Sir Arthur Conan Doyle - The Adventure of the Norwood Builder </li>
+            <li>page 70</li>
             <li>A link to the New York Public Library Digital Collections (https://digitalcollections.nypl.org/items/9587f2f0-732a-0136-11d7-19ebff38455b)</li>
-            <li>Your name!</li>
+            <li>Thys</li>
             <li>The licence, including link: (https://creativecommons.org/licenses/by-nc/4.0/) </li>
             <li>A link to the BDMP encoding manual (https://bdmpmanual.uantwerpen.be/)</li>
           </ul>
-          <p><b>Style all the pages the way you want by diving into the css file.</b></p>
         </div>
         <div class="col-7" id="text"></div>
       </div>
