--- a/conan_doyle_template/index.html
+++ b/conan_doyle_template/index.html
@@ -42,10 +42,10 @@
           <ul>
             <li>Digital Edition Light: Sir Arthur Conan Doyle - The Adventure of the Norwood Builder </li>
             <li>page 70</li>
-            <li>A link to the New York Public Library Digital Collections (https://digitalcollections.nypl.org/items/9587f2f0-732a-0136-11d7-19ebff38455b)</li>
+            <li>Link to the New York Public Library Digital Collections: (https://digitalcollections.nypl.org/items/9587f2f0-732a-0136-11d7-19ebff38455b)</li>
             <li>Thys</li>
             <li>The licence, including link: (https://creativecommons.org/licenses/by-nc/4.0/) </li>
-            <li>A link to the BDMP encoding manual (https://bdmpmanual.uantwerpen.be/)</li>
+            <li>BDMP encoding manual: (https://bdmpmanual.uantwerpen.be/)</li>
           </ul>
         </div>
         <div class="col-7" id="text"></div>
